--- a/Website Template/Index.html
+++ b/Website Template/Index.html
@@ -5,16 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <meta name="description" content="Welcome to my portfolio website, my name is Susmit Ullas. The website showcases my work and accomplishments as a Developer.">
-
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="Resources/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="Resources/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Resources/favicon-16x16.png">
-    <link rel="manifest" href="Resources/site.webmanifest">
-    <link rel="mask-icon" href="Resources/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#aa3d1e">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="description" content="Welcome">
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -22,7 +13,7 @@
     <!-- CSS Files -->
     <link rel="stylesheet" href="style.css">
 
-    <title>Susmit Ullas</title>
+    <title>Hackathon</title>
 </head>
 
 <body>
@@ -37,9 +28,9 @@
             </div>
             <ul class="nav">
                 <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
-                <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
-                <li><a href="#services"><i class="fa fa-list"></i>Services</a></li>
-                <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li>
+                <li><a href="#careerPath"><i class="fa fa-user"></i>Career Path</a></li>
+                <li><a href="#domainOfInterest"><i class="fa fa-list"></i>Domain Of Interest</a></li>
+                <li><a href="#Jobs"><i class="fa fa-briefcase"></i>Jobs</a></li>
                 <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li>
             </ul>
         </div>
@@ -51,31 +42,31 @@
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
-                            <h3 class="hello">Hello, my name is <span class="name">Susmit Ullas</span></h3>
-                            <h3 class="my-profession">I' m a <span class="typing"></span></h3>
+                            <h3 class="hello">Wecome to <span class="name">Internet Academy</span></h3>
+                            <h3 class="profession">Become a <span class="typing"></span></h3>
                             <p>ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
                             <a href="#contact" class="btn hire-me">Hire Me</a>
                         </div>
                         <div class="home-img padd-15">
-                            <img src="Resources/Susmit Ullas.jpg" alt="Profile Picture">
+                            <iframe src="Cube/cube.html" title=""></iframe>
                         </div>
                     </div>
                 </div>
             </section>
             <!-- Home Section End -->
 
-            <!-- About Section Start -->
-            <section class="about section" id="about">
+            <!-- CareerPath Section Start -->
+            <section class="careerPath section" id="careerPath">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
-                            <h2>About Me</h2>
+                            <h2>careerPath Me</h2>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="about-content padd-15">
+                        <div class="careerPath-content padd-15">
                             <div class="row">
-                                <div class="about-text padd-15">
+                                <div class="careerPath-text padd-15">
                                     <h3>I'm Susmit Ullas and <span>Web Developer</span></h3>
                                     <p>
                                         Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -276,21 +267,21 @@
                     </div>    
                 </div>
             </section>    
-            <!-- About Section End -->
+            <!-- careerPath Section End -->
 
-            <!-- Services Section Start -->
-            <section class="service section" id="services">
+            <!-- domains Section Start -->
+            <section class="domain section" id="domainOfInterest">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
-                            <h2>Services</h2>
+                            <h2>domains</h2>
                         </div>
                     </div>
                     <div class="row">
 
-                        <!-- Service Item 1-->
-                        <div class="service-item padd-15">
-                            <div class="service-item-inner">
+                        <!-- domain Item 1-->
+                        <div class="domain-item padd-15">
+                            <div class="domain-item-inner">
                                 <div class="icon">
                                     <i class="fa fa-mobile-alt"></i>
                                 </div>
@@ -304,9 +295,9 @@
                             </div>
                         </div>
 
-                        <!-- Service Item 2-->
-                        <div class="service-item padd-15">
-                            <div class="service-item-inner">
+                        <!-- domain Item 2-->
+                        <div class="domain-item padd-15">
+                            <div class="domain-item-inner">
                                 <div class="icon">
                                     <i class="fa fa-laptop-code"></i>
                                 </div>
@@ -320,9 +311,9 @@
                             </div>
                         </div>
 
-                        <!-- Service Item 3-->
-                        <div class="service-item padd-15">
-                            <div class="service-item-inner">
+                        <!-- domain Item 3-->
+                        <div class="domain-item padd-15">
+                            <div class="domain-item-inner">
                                 <div class="icon">
                                     <i class="fa fa-palette"></i>
                                 </div>
@@ -336,9 +327,9 @@
                             </div>
                         </div>
 
-                        <!-- Service Item 4-->
-                        <div class="service-item padd-15">
-                            <div class="service-item-inner">
+                        <!-- domain Item 4-->
+                        <div class="domain-item padd-15">
+                            <div class="domain-item-inner">
                                 <div class="icon">
                                     <i class="fa fa-code"></i>
                                 </div>
@@ -352,9 +343,9 @@
                             </div>
                         </div>
 
-                        <!-- Service Item 5-->
-                        <div class="service-item padd-15">
-                            <div class="service-item-inner">
+                        <!-- domain Item 5-->
+                        <div class="domain-item padd-15">
+                            <div class="domain-item-inner">
                                 <div class="icon">
                                     <i class="fa fa-search"></i>
                                 </div>
@@ -368,9 +359,9 @@
                             </div>
                         </div>
 
-                        <!-- Service Item 6-->
-                        <div class="service-item padd-15">
-                            <div class="service-item-inner">
+                        <!-- domain Item 6-->
+                        <div class="domain-item padd-15">
+                            <div class="domain-item-inner">
                                 <div class="icon">
                                     <i class="fa fa-bullhorn"></i>
                                 </div>
@@ -387,73 +378,73 @@
                     </div>
                 </div>
             </section>
-            <!-- Services Section End -->
+            <!-- domains Section End -->
 
-            <!-- Portfolio Section Start -->
-            <section class="portfolio section" id="portfolio">
+            <!-- Jobs Section Start -->
+            <section class="Jobs section" id="Jobs">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
-                            <h2>Portfolio</h2>
+                            <h2>Jobs</h2>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="portfolio-heading padd-15">
+                        <div class="Jobs-heading padd-15">
                             <h2>My Last Projects :</h2>
                         </div>
                     </div>
                     <div class="row">
 
-                        <!-- portfolio item 1-->
-                        <div class="portfolio-item padd-15">
-                            <div class="portfolio-item-inner shadow-dark">
-                                <div class="portfolio-img">
-                                    <img src="Resources/portfolio-1.jpg" alt="Portfolio">
+                        <!-- Jobs item 1-->
+                        <div class="Jobs-item padd-15">
+                            <div class="Jobs-item-inner shadow-dark">
+                                <div class="Jobs-img">
+                                    <img src="Resources/Jobs-1.jpg" alt="Jobs">
                                 </div>
                             </div>
                         </div>
 
-                        <!-- portfolio item 2-->
-                        <div class="portfolio-item padd-15">
-                            <div class="portfolio-item-inner shadow-dark">
-                                <div class="portfolio-img">
-                                    <img src="Resources/portfolio-2.jpg" alt="Portfolio">
+                        <!-- Jobs item 2-->
+                        <div class="Jobs-item padd-15">
+                            <div class="Jobs-item-inner shadow-dark">
+                                <div class="Jobs-img">
+                                    <img src="Resources/Jobs-2.jpg" alt="Jobs">
                                 </div>
                             </div>
                         </div>
 
-                        <!-- portfolio item 3-->
-                        <div class="portfolio-item padd-15">
-                            <div class="portfolio-item-inner shadow-dark">
-                                <div class="portfolio-img">
-                                    <img src="Resources/portfolio-3.jpg" alt="Portfolio">
+                        <!-- Jobs item 3-->
+                        <div class="Jobs-item padd-15">
+                            <div class="Jobs-item-inner shadow-dark">
+                                <div class="Jobs-img">
+                                    <img src="Resources/Jobs-3.jpg" alt="Jobs">
                                 </div>
                             </div>
                         </div>
 
-                        <!-- portfolio item 4-->
-                        <div class="portfolio-item padd-15">
-                            <div class="portfolio-item-inner shadow-dark">
-                                <div class="portfolio-img">
-                                    <img src="Resources/portfolio-4.jpg" alt="Portfolio">
+                        <!-- Jobs item 4-->
+                        <div class="Jobs-item padd-15">
+                            <div class="Jobs-item-inner shadow-dark">
+                                <div class="Jobs-img">
+                                    <img src="Resources/Jobs-4.jpg" alt="Jobs">
                                 </div>
                             </div>
                         </div>
 
-                        <!-- portfolio item 5-->
-                        <div class="portfolio-item padd-15">
-                            <div class="portfolio-item-inner shadow-dark">
-                                <div class="portfolio-img">
-                                    <img src="Resources/portfolio-5.jpg" alt="Portfolio">
+                        <!-- Jobs item 5-->
+                        <div class="Jobs-item padd-15">
+                            <div class="Jobs-item-inner shadow-dark">
+                                <div class="Jobs-img">
+                                    <img src="Resources/Jobs-5.jpg" alt="Jobs">
                                 </div>
                             </div>
                         </div>
 
-                        <!-- portfolio item 6-->
-                        <div class="portfolio-item padd-15">
-                            <div class="portfolio-item-inner shadow-dark">
-                                <div class="portfolio-img">
-                                    <img src="Resources/portfolio-6.jpg" alt="Portfolio">
+                        <!-- Jobs item 6-->
+                        <div class="Jobs-item padd-15">
+                            <div class="Jobs-item-inner shadow-dark">
+                                <div class="Jobs-img">
+                                    <img src="Resources/Jobs-6.jpg" alt="Jobs">
                                 </div>
                             </div>
                         </div>
@@ -461,7 +452,7 @@
                     </div>
                 </div>                              
             </section>
-            <!-- Portfolio Section End -->
+            <!-- Jobs Section End -->
 
             <!-- Contact Section Start -->
             <section class="contact section" id="contact">
