--- a/Website Template/Index.html
+++ b/Website Template/Index.html
@@ -230,7 +230,7 @@
                                 </div>
                                 <h4>Lorem</h4>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 </p>
                             </div>
                         </div>
@@ -244,7 +244,6 @@
                                 <h4>Lorem</h4>
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Architecto dolorum modi laudantium officiis sint magnam.
                                 </p>
                             </div>
                         </div>
@@ -258,7 +257,6 @@
                                 <h4>Lorem</h4>
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Architecto dolorum modi laudantium officiis sint magnam.
                                 </p>
                             </div>
                         </div>
@@ -272,7 +270,6 @@
                                 <h4>Lorem</h4>
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Architecto dolorum modi laudantium officiis sint magnam.
                                 </p>
                             </div>
                         </div>
@@ -286,7 +283,6 @@
                                 <h4>Lorem</h4>
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Architecto dolorum modi laudantium officiis sint magnam.
                                 </p>
                             </div>
                         </div>
@@ -300,7 +296,6 @@
                                 <h4>Lorem</h4>
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Architecto dolorum modi laudantium officiis sint magnam.
                                 </p>
                             </div>
                         </div>
@@ -414,14 +409,14 @@
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-envelope"></i></div>
                             <h4>Email</h4>
-                            <p>info@gmail.com</p>
+                            <p>XXX</p>
                         </div>
 
                         <!-- Contact Info Item 4-->
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-globe-europe"></i></div>
                             <h4>Website</h4>
-                            <p>www.domain.com</p>
+                            <p>XXX.com</p>
                         </div>
 
                     </div>
