--- a/Website Template/Index.html
+++ b/Website Template/Index.html
@@ -30,7 +30,7 @@
                 <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
                 <li><a href="#careerPath"><i class="fa fa-user"></i>Career Path</a></li>
                 <li><a href="#domainOfInterest"><i class="fa fa-list"></i>Domain Of Interest</a></li>
-                <li><a href="#Jobs"><i class="fa fa-briefcase"></i>Jobs</a></li>
+                <li><a href="#jobs"><i class="fa fa-briefcase"></i>Jobs</a></li>
                 <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li>
             </ul>
         </div>
@@ -306,7 +306,7 @@
             <!-- domains Section End -->
 
             <!-- Jobs Section Start -->
-            <section class="Jobs section" id="Jobs">
+            <section class="Jobs section" id="jobs">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
