--- a/Website Template/Index.html
+++ b/Website Template/Index.html
@@ -315,7 +315,7 @@
                     </div>
                     <div class="row">
                         <div class="Jobs-heading padd-15">
-                            <h2>Seach for Jobs</h2>
+                            <h2>Search for Jobs</h2>
                         </div>
                     </div>
                     <div class="row">
