--- a/Website Template/Index.html
+++ b/Website Template/Index.html
@@ -374,6 +374,24 @@
                             </div>
                         </div>
 
+                        <!-- Jobs item 7-->
+                        <div class="Jobs-item padd-15">
+                            <div class="Jobs-item-inner shadow-dark">
+                                <div class="Jobs-img">
+                                    <img src="Resources/Jobs-7.png" alt="Jobs">
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Jobs item 8-->
+                        <div class="Jobs-item padd-15">
+                            <div class="Jobs-item-inner shadow-dark">
+                                <div class="Jobs-img">
+                                    <img src="Resources/Jobs-8.png" alt="Jobs">
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>                              
             </section>
