--- a/Website Template/Index.html
+++ b/Website Template/Index.html
@@ -7,6 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="description" content="Welcome">
 
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="Favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Favicon/favicon-16x16.png">
+    <link rel="manifest" href="Favicon/site.webmanifest">
+    <link rel="mask-icon" href="Favicon/safari-pinned-tab.svg" color="#1c2021">
+    <meta name="msapplication-TileColor" content="#000000">
+
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -17,7 +25,7 @@
 </head>
 
 <body>
-    <class="main-container">
+    <div class="main-container">
    
         <div class="aside">
             <div class="logo">
@@ -30,7 +38,7 @@
                 <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
                 <li><a href="#careerPath"><i class="fa fa-user"></i>Career Path</a></li>
                 <li><a href="#domainOfInterest"><i class="fa fa-list"></i>Domain Of Interest</a></li>
-                <li><a href="#jobs"><i class="fa fa-briefcase"></i>Jobs</a></li>
+                <li><a href="#Courses"><i class="fa fa-briefcase"></i>Courses</a></li>
                 <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li>
             </ul>
         </div>
@@ -45,7 +53,7 @@
                             <h3 class="hello">Wecome to <span class="name">Internet Academy</span></h3>
                             <h3 class="profession">Become a <span class="typing"></span></h3>
                             <p>ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
-                            <a href="#contact" class="btn join">Join Us</a>
+                            <a href="#contact" class="btn">Join Us</a>
                         </div>
                     </div>
                 </div>
@@ -207,12 +215,15 @@
 
                             </div>
                         </div>
-                    </div>    
+                    </div>
+                    <div class="see-more">
+                        <a href="" class="btn">See More</a>
+                    </div>       
                 </div>
             </section>    
-            <!-- careerPath Section End -->
+            <!-- CareerPath Section End -->
 
-            <!-- domains Section Start -->
+            <!-- Domains Section Start -->
             <section class="domain section" id="domainOfInterest">
                 <div class="container">
                     <div class="row">
@@ -222,7 +233,7 @@
                     </div>
                     <div class="row">
 
-                        <!-- domain Item 1-->
+                        <!-- domain item 1-->
                         <div class="domain-item padd-15">
                             <div class="domain-item-inner">
                                 <div class="icon">
@@ -235,7 +246,7 @@
                             </div>
                         </div>
 
-                        <!-- domain Item 2-->
+                        <!-- domain item 2-->
                         <div class="domain-item padd-15">
                             <div class="domain-item-inner">
                                 <div class="icon">
@@ -248,7 +259,7 @@
                             </div>
                         </div>
 
-                        <!-- domain Item 3-->
+                        <!-- domain item 3-->
                         <div class="domain-item padd-15">
                             <div class="domain-item-inner">
                                 <div class="icon">
@@ -261,7 +272,7 @@
                             </div>
                         </div>
 
-                        <!-- domain Item 4-->
+                        <!-- domain item 4-->
                         <div class="domain-item padd-15">
                             <div class="domain-item-inner">
                                 <div class="icon">
@@ -274,7 +285,7 @@
                             </div>
                         </div>
 
-                        <!-- domain Item 5-->
+                        <!-- domain item 5-->
                         <div class="domain-item padd-15">
                             <div class="domain-item-inner">
                                 <div class="icon">
@@ -287,7 +298,7 @@
                             </div>
                         </div>
 
-                        <!-- domain Item 6-->
+                        <!-- domain item 6-->
                         <div class="domain-item padd-15">
                             <div class="domain-item-inner">
                                 <div class="icon">
@@ -303,91 +314,128 @@
                     </div>
                 </div>
             </section>
-            <!-- domains Section End -->
+            <!-- Domains Section End -->
 
-            <!-- Jobs Section Start -->
-            <section class="Jobs section" id="jobs">
+            <!-- Courses Section Start -->
+            <section class="Courses section" id="Courses">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
-                            <h2>Jobs</h2>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="Jobs-heading padd-15">
-                            <h2>Search for Jobs</h2>
+                            <h2>Courses</h2>
                         </div>
                     </div>
                     <div class="row">
 
-                        <!-- Jobs item 1-->
-                        <div class="Jobs-item padd-15">
-                            <div class="Jobs-item-inner shadow-dark">
-                                <div class="Jobs-img">
-                                    <img src="Resources/Jobs-1.png" alt="Jobs">
+                        <!-- Courses item 1-->
+                        <div class="Courses-item padd-15">
+                            <div class="Courses-item-inner shadow-dark">
+                                <div class="Courses-img">
+                                    <img src="Resources/Courses-1.png" alt="Courses">
+                                </div>
+                                <div class="Course-info">
+                                    <h4>Lorem Ipsum</h4>
+                                    <p>
+                                        Lorem ipsum Lorem ipsum, dolor sit a 
+                                        dolor sit amet consectetur adipisicing elit.
+                                    </p>
+                                </div>
+                                <div class="read-more">
+                                    <a href="" class="btn">Read More →</a>
                                 </div>
                             </div>
                         </div>
 
-                        <!-- Jobs item 2-->
-                        <div class="Jobs-item padd-15">
-                            <div class="Jobs-item-inner shadow-dark">
-                                <div class="Jobs-img">
-                                    <img src="Resources/Jobs-2.png" alt="Jobs">
+                        <!-- Courses item 2-->
+                        <div class="Courses-item padd-15">
+                            <div class="Courses-item-inner shadow-dark">
+                                <div class="Courses-img">
+                                    <img src="Resources/Courses-2.png" alt="Courses">
+                                </div>
+                                <div class="Course-info">
+                                    <h4>Lorem Ipsum</h4>
+                                    <p>
+                                        Lorem ipsum Lorem ipsum, dolor sit a 
+                                        dolor sit amet consectetur adipisicing elit.
+                                    </p>
+                                </div>
+                                <div class="read-more">
+                                    <a href="" class="btn">Read More →</a>
                                 </div>
                             </div>
                         </div>
 
-                        <!-- Jobs item 3-->
-                        <div class="Jobs-item padd-15">
-                            <div class="Jobs-item-inner shadow-dark">
-                                <div class="Jobs-img">
-                                    <img src="Resources/Jobs-3.png" alt="Jobs">
+                        <!-- Courses item 3-->
+                        <div class="Courses-item padd-15">
+                            <div class="Courses-item-inner shadow-dark">
+                                <div class="Courses-img">
+                                    <img src="Resources/Courses-3.png" alt="Courses">
+                                </div>
+                                <div class="Course-info">
+                                    <h4>Lorem Ipsum</h4>
+                                    <p>
+                                        Lorem ipsum Lorem ipsum, dolor sit a 
+                                        dolor sit amet consectetur adipisicing elit.
+                                    </p>
+                                </div>
+                                <div class="read-more">
+                                    <a href="" class="btn">Read More →</a>
                                 </div>
                             </div>
                         </div>
 
-                        <!-- Jobs item 4-->
-                        <div class="Jobs-item padd-15">
-                            <div class="Jobs-item-inner shadow-dark">
-                                <div class="Jobs-img">
-                                    <img src="Resources/Jobs-4.png" alt="Jobs">
+                        <!-- Courses item 4-->
+                        <div class="Courses-item padd-15">
+                            <div class="Courses-item-inner shadow-dark">
+                                <div class="Courses-img">
+                                    <img src="Resources/Courses-4.png" alt="Courses">
+                                </div>
+                                <div class="Course-info">
+                                    <h4>Lorem Ipsum</h4>
+                                    <p>
+                                        Lorem ipsum Lorem ipsum, dolor sit a 
+                                        dolor sit amet consectetur adipisicing elit.
+                                    </p>
+                                </div>
+                                <div class="read-more">
+                                    <a href="" class="btn">Read More →</a>
                                 </div>
                             </div>
                         </div>
 
-                        <!-- Jobs item 5-->
-                        <div class="Jobs-item padd-15">
-                            <div class="Jobs-item-inner shadow-dark">
-                                <div class="Jobs-img">
-                                    <img src="Resources/Jobs-5.png" alt="Jobs">
+                        <!-- Courses item 5-->
+                        <div class="Courses-item padd-15">
+                            <div class="Courses-item-inner shadow-dark">
+                                <div class="Courses-img">
+                                    <img src="Resources/Courses-5.png" alt="Courses">
+                                </div>
+                                <div class="Course-info">
+                                    <h4>Lorem Ipsum</h4>
+                                    <p>
+                                        Lorem ipsum Lorem ipsum, dolor sit a 
+                                        dolor sit amet consectetur adipisicing elit.
+                                    </p>
+                                </div>
+                                <div class="read-more">
+                                    <a href="" class="btn">Read More →</a>
                                 </div>
                             </div>
                         </div>
 
-                        <!-- Jobs item 6-->
-                        <div class="Jobs-item padd-15">
-                            <div class="Jobs-item-inner shadow-dark">
-                                <div class="Jobs-img">
-                                    <img src="Resources/Jobs-6.png" alt="Jobs">
+                        <!-- Courses item 6-->
+                        <div class="Courses-item padd-15">
+                            <div class="Courses-item-inner shadow-dark">
+                                <div class="Courses-img">
+                                    <img src="Resources/Courses-6.png" alt="Courses">
                                 </div>
-                            </div>
-                        </div>
-
-                        <!-- Jobs item 7-->
-                        <div class="Jobs-item padd-15">
-                            <div class="Jobs-item-inner shadow-dark">
-                                <div class="Jobs-img">
-                                    <img src="Resources/Jobs-7.png" alt="Jobs">
+                                <div class="Course-info">
+                                    <h4>Lorem Ipsum</h4>
+                                    <p>
+                                        Lorem ipsum Lorem ipsum, dolor sit a 
+                                        dolor sit amet consectetur adipisicing elit.
+                                    </p>
                                 </div>
-                            </div>
-                        </div>
-
-                        <!-- Jobs item 8-->
-                        <div class="Jobs-item padd-15">
-                            <div class="Jobs-item-inner shadow-dark">
-                                <div class="Jobs-img">
-                                    <img src="Resources/Jobs-8.png" alt="Jobs">
+                                <div class="read-more">
+                                    <a href="" class="btn">Read More →</a>
                                 </div>
                             </div>
                         </div>
@@ -395,7 +443,7 @@
                     </div>
                 </div>                              
             </section>
-            <!-- Jobs Section End -->
+            <!-- Courses Section End -->
 
             <!-- Contact Section Start -->
             <section class="contact section" id="contact">
@@ -492,6 +540,50 @@
                 </div>
             </section>
             <!-- Contact Section End -->
+
+            <!-- Footer Section Start -->
+            <section class="footer section" id="footer">
+                <div class="container">
+                    <hr>
+                    <div class="row">
+
+                        <!-- Footer Item 1-->
+                        <div class="footer-item padd-15">
+                            <a href="">
+                            <div class="icon"><i class="fa-brands fa-github"></i></div>
+                            <h4>GitHub</h4>
+                            </a>
+                        </div>
+
+                        <!-- Footer Item 2-->
+                        <div class="footer-item padd-15">
+                            <a href="">
+                            <div class="icon"><i class="fa-brands fa-twitter"></i></div>
+                            <h4>Twitter</h4>
+                            </a>
+                        </div>
+
+                        <!-- Footer Item 3-->
+                        <div class="footer-item padd-15">
+                            <a href="">
+                            <div class="icon"><i class="fa-brands fa-instagram"></i></div>
+                            <h4>Instagram</h4>
+                            </a>
+                        </div>
+
+                        <!-- Footer Item 4-->
+                        <div class="footer-item padd-15">
+                            <a href="">
+                            <div class="icon"><i class="fa-brands fa-facebook"></i></i></div>
+                            <h4>Facebook</h4>
+                            </a>
+                        </div>
+
+                    </div>
+                    <h4 class="footer-rights">© All rights reserved</h4>
+                </div>
+            </section>
+            <!-- Footer Section End -->
             
         </div>
 
