--- a/Website Template/Index.html
+++ b/Website Template/Index.html
@@ -73,7 +73,7 @@
                             <div class="row">
 
                                 <div class="webDevelopment padd-15">
-                                    <a href="#"><h3 class="title">Web Developer</h3></a>
+                                    <a href="#"><h3 class="title">Software Engineer</h3></a>
                                     <div class="row">
                                         <div class="timeline-box padd-15">
                                             <div class="timeline shadow-dark">
