--- a/Website Template/Index.html
+++ b/Website Template/Index.html
@@ -21,7 +21,7 @@
     <!-- CSS Files -->
     <link rel="stylesheet" href="style.css">
 
-    <title>Hackathon</title>
+    <title>Internet Academy</title>
 </head>
 
 <body>
@@ -43,10 +43,19 @@
             </ul>
         </div>
 
+        <div class="sign">
+            <div class="sign-in">
+                <a href="Login.html" class="btn">Sign In</a>
+            </div>
+            <div class="sign-up">
+                <a href="Register.html" class="btn">Sign Up</a>
+            </div>
+        </div>
+
         <div class="main-content">
 
             <!-- Home Section Start -->
-            <section class="home active section" id="home">
+            <section class="home section" id="home">
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
@@ -544,39 +553,38 @@
             <!-- Footer Section Start -->
             <section class="footer section" id="footer">
                 <div class="container">
-                    <hr>
                     <div class="row">
 
                         <!-- Footer Item 1-->
                         <div class="footer-item padd-15">
                             <a href="">
                             <div class="icon"><i class="fa-brands fa-github"></i></div>
-                            <h4>GitHub</h4>
                             </a>
+                            <h4>GitHub</h4>
                         </div>
 
                         <!-- Footer Item 2-->
                         <div class="footer-item padd-15">
                             <a href="">
                             <div class="icon"><i class="fa-brands fa-twitter"></i></div>
-                            <h4>Twitter</h4>
                             </a>
+                            <h4>Twitter</h4>
                         </div>
 
                         <!-- Footer Item 3-->
                         <div class="footer-item padd-15">
                             <a href="">
                             <div class="icon"><i class="fa-brands fa-instagram"></i></div>
-                            <h4>Instagram</h4>
                             </a>
+                            <h4>Instagram</h4>
                         </div>
 
                         <!-- Footer Item 4-->
                         <div class="footer-item padd-15">
                             <a href="">
                             <div class="icon"><i class="fa-brands fa-facebook"></i></i></div>
-                            <h4>Facebook</h4>
                             </a>
+                            <h4>Facebook</h4>
                         </div>
 
                     </div>
